text-wrapping fixed

--- a/need_a_help_app/static/need_a_help_app/style.css
+++ b/need_a_help_app/static/need_a_help_app/style.css
@@ -564,6 +564,13 @@ header.masthead .masthead-content .masthead-subheading {
   white-space: normal;
 }
 
+#mess_pre{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 300px;
+}
+
 /* star styles */
 
 .star-outer {
